# architectural-rag

./: .gitignore  BUGFIX_PLAN.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  PLAN_GRAPH_ENHANCEMENT.md  README.md  TODOS.md  analysis_rules.json  antigravity_daemon.py  audio_indexer.py  audio_transcriber.py  authority.py  available_models.txt  check_model.py  check_models.py  check_pipeline.py  chunk_builder.py  classification_rules.yaml  classifier.py  clean_db.py  com.antigravity.rag.plist  config.py  content_router.py  context_builder.py  context_extractor.py  context_retriever.py  context_updater.py  create_checklist_folders.py  database.py  dense_indexer.py  docker-compose.yml  drawing_processor.py  drive_sync.py  embedding_client.py  evidence_extractor.py  file_store.py  fix_authfetch.py  fix_db.py  gemini_client.py  (+70 more)
work_excel_automation/: fix_building_plan.py  fix_building_plan2.py  generate_building_plan.py  generate_samples.py  pyproject.toml  requirements.txt  test_phase2.py
work_excel_automation/adapters/: excel_adapter.py  file_io.py  logger.py
work_excel_automation/core/: contracts.py  discovery.py  dry_run.py  dry_run_v2.py  executor.py  executor_v2.py  intake.py  models.py  models_v2.py  planner.py  planner_v2.py  profile_matcher.py  profile_matcher_v2.py  profiling.py  recovery_v2.py  trusted_mode.py  verifier.py  verifier_v2.py  workflow.py
work_excel_automation/docs/: architecture.md  hitl_architecture_design.md  safety.md  workflow.md
work_excel_automation/interfaces/: cli.py  mcp_low_level.py  mcp_server.py
work_excel_automation/prompts/: 02_plan.md  (+3 more)
(+426 files in other folders)
